--- a/manifest.json
+++ b/manifest.json
@@ -12,11 +12,13 @@
   "content_scripts":[ {
       "matches": ["https://fastapps.rit.edu/*"],
       "js":["controller.js"],
-      "run_at": "document_end"
+      "run_at": "document_idle"
     }
   ],
   "permissions": [
     "activeTab",
-    "https://ajax.googleapis.com/"
+    "https://ajax.googleapis.com/",
+    "cookies",
+    "https://fastapps.rit.edu/*"
   ]
 }
